--- a/indexlib/build.gradle
+++ b/indexlib/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.github.promeg:tinypinyin:1.0.0' // ~80KB
 }
