--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         <activity android:name=".ui.WeChatActivity">
         </activity>
         <activity android:name=".ui.SwipeDelMenuActivity">
-
         </activity>
         <activity android:name=".ui.LauncherActivity">
             <intent-filter>
@@ -21,6 +20,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.MeituanSelectCityActivity">
         </activity>
     </application>
 
